--- a/config.yaml
+++ b/config.yaml
@@ -1,17 +1,24 @@
-server:
+api_keys:
+    - application: "one app"
+      key: "not-a-real-api-key-but-it-needs-to-be-long"
+      kind: "log"
+    - application: "ci/cd"
+      key: "this-is-a-long-key-that-provides-admin-access"
+      kind: "admin"
+
+serve:
   host: "localhost"
-  port: 8080
+  port: 8888
 
-gin_mode: "debug"
-api_key: "not-a-real-api-key-but-it-needs-to-be-long"
+app:
+  gin_mode: "debug"
+  storage: "sqlite"
 
-storage: "sqlite"
-sqlite_path: "."
-
+sqlite:
+  path: "."
 
 minio:
   host: "minio"
   port: "8000"
-  params: 
-    disableSSL: true
-    s3ForcePathStyle: true
+  disableSSL: true
+  s3ForcePathStyle: true
