--- a/container-config.yaml
+++ b/container-config.yaml
@@ -1,9 +1,25 @@
-server:
+api_keys:
+    - application: "one app"
+      key: "not-a-real-api-key-but-it-needs-to-be-long"
+      kind: "log"
+    - application: "ci/cd"
+      key: "this-is-a-long-key-that-provides-admin-access"
+      kind: "admin"
+
+serve:
   host: "0.0.0.0"
   port: 8888
 
-gin_mode: "debug"
-api_key: "not-a-real-api-key-but-it-needs-to-be-long"
+app:
+  gin_mode: "debug"
+  storage: "s3"
 
-storage: "sqlite"
-sqlite_path: "/data"
+sqlite:
+  path: "/data"
+
+s3:
+  scheme: "s3"
+  host: "localhost"
+  port: "3900"
+  disableSSL: true
+  s3ForcePathStyle: true
