Continuing to spike pipeline
This doesn't work as well as I'd like. Specifically, the way unique values are used in the logging infra bears some thought. In this example, I was trying to track applications and benes uniquely (anonymously), and the way I did it led to very complex queries.

This begins to raise one of two questions:

1. Should I be smarter about using the two string values, or
2. Should it be possible to post a JSON doc?

--- a/pipeline/Makefile
+++ b/pipeline/Makefile
@@ -1,3 +1,4 @@
-etl:
+jsonnet:
 	jsonnet pipeline.jsonnet > pipeline.json
+etl: jsonnet
 	go run ../... etl --runscript pipeline.json --sqlite 2025-12-29.sqlite
