Improving the data pipeline
I've added some docs. the 'effective-logging' doc is rambling, but it gets at something important.

source and event are *categorical*, and value is *unique*. This matters for how we think about summarizing event data. It also impacts how we think about logging the data in the first place.

<category>,<category>,<unique>

The rest of the changes are cleanup to move ETL/summary work out of Golang and into SQL.

--- a/pipeline/Makefile
+++ b/pipeline/Makefile
@@ -1,4 +1,7 @@
+SCRIPT?=pipeline.json
+DB?=2026-01-03.sqlite
+
 jsonnet:
 	jsonnet pipeline.jsonnet > pipeline.json
 etl: jsonnet
-	go run ../... etl --runscript pipeline.json --sqlite 2025-12-29.sqlite
+	go run ../... etl --runscript "${SCRIPT}" --sqlite "${DB}"
